began refactoring of route page style

--- a/static/js/templates/route_map.html
+++ b/static/js/templates/route_map.html
@@ -16,10 +16,10 @@
             </tbody>
         </table>
     </div>
-    <div class='well map_well' id='map_well'>
-        <div id='map_canvas' class='map_canvas' style='height:300px'></div>
-        <div class='btn-group map_buttons'>
-            <button class='btn' id='reverse'>Reverse</button>
+    <div class='well map-well' id='map_well'>
+        <div id='map_canvas' class='map-canvas' style='height:300px'></div>
+        <div class='btn-group map-buttons'>
+            <button class='btn btn-default' id='reverse'>Reverse</button>
         </div>
     </div>
     <div class='small_scale'>
