--- a/static/less/variables.less
+++ b/static/less/variables.less
@@ -28,13 +28,14 @@
 // -------------------------
 
 @trailio-bg:            #ECF0F1;
+@trailio-text:          #2B5A5A;
 @body-bg:               #fff;
-@text-color:            @gray-dark;
+@text-color:            @trailio-text;
 
 // Links
 // -------------------------
 
-@link-color:            @brand-primary;
+@link-color:            #2B5A5A;
 @link-hover-color:      darken(@link-color, 15%);
 
 // Typography
@@ -83,7 +84,7 @@
 @border-radius-large:            6px;
 @border-radius-small:            3px;
 
-@component-active-bg:            @brand-primary;
+@component-active-bg:            @link-color;
 
 @caret-width-base:               4px;
 @caret-width-large:              5px;
