--- a/templates/front.html
+++ b/templates/front.html
@@ -35,12 +35,11 @@
             <div id="map_canvas" class="map-canvas" data-intro="Select the trail segments you want, making sure they are contiguous." data-step="4">
             </div>
             <input type="search" class="region-search input-lg" id="region_search_box" placeholder="Search by region.">
-
             <div class="btn-group map-buttons">
-                <button class="btn disabled" id="show-trail" data-intro="Then display your route." data-step="5"
+                <button class="btn btn-default disabled" id="show-trail" data-intro="Then display your route." data-step="5"
                         data-position="left">Display Route
                 </button>
-                <button class="btn" id="ref-map" data-loading-text="Loading..." data-intro="...then load the trails."
+                <button class="btn btn-default" id="ref-map" data-loading-text="Loading..." data-intro="...then load the trails."
                         data-step="3" data-position="right">Load Trails
                 </button>
             </div>
@@ -58,24 +57,16 @@
         </div>
 
     </div>
-    <div id="lists" class="row-fluid">
-
-        <div id="classic_list_box" class="pull-left span6">
-            <div class="row-fluid" style="margin-top:10px">
-                <div class="navbar">
-                    <div class="navbar-inner">
-                        <div class="container" style="position:relative">
-                            <h1 class="letterpress">Classic Routes</h1>
-                        </div>
-                    </div>
-                </div>
-
+    <div id="lists" class="row">
+        <div class="panel panel-default col-md-6" id="classic_list_box">
+          <div class="panel-heading"><h1 class="letterpress">Classic Routes</h1></div>
+          <div class="panel-body">
                 <ul id="classic_list" class="media-list"
                     data-intro="Or you can browse through a list of classic trails." data-step="6">
                     {% for item in classic_routes %}
                         <li class="media">
                             <a class="pull-left">
-                                <img class="media-object img-polaroid" src="
+                                <img class="media-object img-thumbnail" src="
                                     {% if item.properties.photo.small %}
                                     {{ item.properties.photo.small }}
                                     {% else %}
@@ -97,30 +88,28 @@
                     {% endfor %}
 
                 </ul>
+          </div>
+          <div class = "panel-footer">
                 <ul class="pager">
                     <li id="cl_previous"><a href="#">Previous</a></li>
                     <li id="cl_next"><a href="#">Next</a></li>
                 </ul>
-            </div>
+          </div>
         </div>
-        <div id="recent_photo_box" class="pull-right span6">
-            <div class="row-fluid" style="margin-top:10px">
-                <div class="navbar">
-                    <div class="navbar-inner">
-                        <div class="container" style="position:relative">
-                            <h1 class="letterpress">Recent Photos</h1></div>
-                    </div>
-                </div>
+        <div id="recent_photo_box" class="panel panel-default col-md-6">
+          <div class="panel-heading">
+          <h1 class="letterpress panel-title">Recent Photos</h1></div>
+          <div class="panel-body">
                 <ul id="recent_list" class="media-list">
                     {% for item in recent_photos %}
                         <li class="media">
                             <a href="profile/{{ item.user.uid }}" class="pull-left">
-                                <img class="img-polaroid media-object"
+                                <img class="img-thumbnail media-object"
                                      src="{{ item.user.picture }}"> {{ item.user.first_name }} {{ item.user.last_name }}
                             </a>
 
                             <div class="media-body"><a href="{{ item.path }}"><img src="{{ item.small }}"
-                                                                                   class="img-polaroid contrib pull-right">
+                                                                                   class="img-thumbnail contrib pull-right">
                             </a>
 
                                 <p>{{ item.text }}
@@ -133,8 +122,7 @@
 
                     {% endfor %}
                 </ul>
-            </div>
+          </div>
         </div>
     </div>
-
 {% endblock %}
