--- a/templates/route.html
+++ b/templates/route.html
@@ -21,28 +21,27 @@
                 </h1>
             </div>
         </div>
-
-        <ul class="nav nav-pills nav-stacked pull-right" style="padding:5px">
-            <li><a data-toggle = "tab" id = "view_map"><i class="icon-map-marker"></i>View Map</a></li>
-            <li><a data-toggle = "tab" id = "view_elevation"><i class="icon-bar-chart"></i>Elevation Profile</a></li>
-            <li data-original-title=""><a data-toggle = "tab" id = "view_photo"><i class="icon-camera-retro"></i>Add Photo</a></li>
-            <li><a data-toggle = "tab" id = "save_route"><i class="icon-facebook"></i>Save Trail</a></li>
+        <div class="row">
+        <ul class="nav nav-pills nav-stacked pull-right col-md-3">
+            <li id = "view_map"><a href = "#"><i class="icon-map-marker"></i>View Map</a></li>
+            <li id = "view_elevation"><a href = "#"><i class="icon-bar-chart"></i>Elevation Profile</a></li>
+            <li id = "view_photo" data-original-title=""><a href = "#" ><i class="icon-camera-retro"></i>Add Photo</a></li>
+            <li id = "save_route"><a href = "#" ><i class="icon-facebook"></i>Save Trail</a></li>
             <hr>
 
             <li id="distance" class="metric">
-                <a style="line-height:25px">
-                    <span class="label">Distance</span>
+                <a href = "#">
+                    <span class="label label-default">Distance</span>
                     <br>
                     <span id="dis_val">{{ properties.distance / 1000 }}</span>
                     <span style="font-size: 85%" id="dis_unit"> Kilometers</span>
                 </a>
             </li>
         </ul>
-        <div class="tab-content" style="min-height:400px">
-
+        <div class="tab-content col-md-9"></div>
         </div>
-    <div class="row-fluid">
-    <div id="contrib_carousel" class="carousel slide pull-left span12" data-interval="false">
+    <div class="row">
+    <div id="contrib_carousel" class="carousel slide pull-left col-md-12" data-interval="false">
         <ol class="carousel-indicators">
             {% for item in properties.photos %}
                 <li data-target="#contrib_carousel" data-slide-to="{{ loop.index0 }}" {% if loop.first %}class="active"{% endif %}></li>
@@ -51,19 +50,20 @@
 
         <div class="carousel-inner" style="height:400px">
 
+            <div class="carousel-caption-mouse">
+            </div>
 
             {% for item in properties.photos%}
+            <span class="rating pull-right">
+                    <span class="star {% if item.voted %}voted{% endif %}"></span>
+            </span>
 
             <div class="item {% if loop.first %}active{% endif %}" id="jid+{{ item.jid }}" style="height:400px">
             <img style="width:100%" src="{{ item.medium }}">
-                <div class="carousel-caption-mouse">
-                    <div class="carousel-caption" style="display:none">
-                    <p style="font-size:16px">{{ item.text }}</p>
-                        <span class="rating pull-right">
-                            <span class="star {% if item.voted %}voted{% endif %}"></span>
-                        </span>
-                    </div>
-                </div>
+            <div class="carousel-caption" style="display:none">
+            <p style="font-size:16px">{{ item.text }}</p>
+            </div>
+
             </div>
 
             {% endfor %}
