refactored route page style, fixed voting api

--- a/static/js/templates/image_upload_container.html
+++ b/static/js/templates/image_upload_container.html
@@ -1,7 +1,7 @@
 <form id="fileupload" method="POST" enctype="multipart/form-data">
     <div class="row fileupload-buttonbar">
-        <span class="btn btn-success fileinput-button" style="margin:10px"><i class="icon-plus icon-white"></i><span>Add files...</span><input
-                type="file" name="files[]" multiple></span>
+        <input type="file" name="files[]" multiple>
+        <span class="btn btn-success fileinput-button" style="margin:10px"><i class="icon-plus icon-white"></i><span>Add files...</span></span>
         <button type="submit" class="btn btn-primary start" style="margin:10px"><i
                 class="icon-upload icon-white"></i><span>Start upload</span></button>
         <button type="reset" class="btn btn-warning cancel" style="margin:10px"><i
