--- a/templates/index.html
+++ b/templates/index.html
@@ -86,9 +86,9 @@
             <hr style="margin:10px 0 10px;width:250px">
 
             <form role="form" method="get" class="form-horizontal">
-                <div class="form-group">
+                <div class="form-group" id="trail_search">
                     <label>Search for a Trail.</label>
-                    <input type="search" class="input-lg form-control search-query" id="trail_search_box"
+                    <input type="search" class="input-lg form-control search-query"
                            data-provide="typeahead" autocomplete="off" placeholder="Find a trail.">
                 </div>
             </form>
@@ -135,3 +135,4 @@
 </body>
 
 </html>​
+
