--- a/static/js/templates/route_map.html
+++ b/static/js/templates/route_map.html
@@ -17,26 +17,9 @@
         </table>
     </div>
     <div class='well map-well' id='map_well'>
-        <div id='map_canvas' class='map-canvas' style='height:300px'></div>
+        <div id='map_canvas' class='map-canvas'></div>
         <div class='btn-group map-buttons'>
             <button class='btn btn-default' id='reverse'>Reverse</button>
         </div>
-    </div>
-    <div class='small_scale'>
-        <table class='scale-img'>
-            <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
     </div>
 </div>
