--- a/static/less/app.less
+++ b/static/less/app.less
@@ -27,9 +27,13 @@ div.map-well {
     text-align:center;
 }
 
+.tab-content {
+  height : 350px;
+}
+//
 div.map-canvas {
-    height:400px;
-    width:100%;
+    height:280px;
+//    width:100%;
 }
 
 div.map-buttons {
@@ -56,13 +60,6 @@ input.region-search {
 
 }
 
-.carousel-caption-mouse {
-    left:0;
-    right: 0;
-    bottom:0;
-    position:absolute;
-    height:200px;
-}
 
 input.region-search:focus {
   width: 50%;
@@ -80,11 +77,22 @@ h1.letterpress{
   margin-right: 10px;
 }
 
+///route page
+
+.carousel-caption {
+  display : none;
+
+}
+//.carousel-caption-mouse {
+//  z-index: 100;
+//}
+
 .rating {
     unicode-bidi: bidi-override;
     direction: rtl;
     font-size: 30px;
     top : 10px;
+    z-index: 100;
 }
 .rating span.star {
     font-family: FontAwesome;
@@ -100,6 +108,7 @@ h1.letterpress{
     padding-right: 5px;
     color: #999999;
 }
+
 .rating span.star:hover:before,
 .rating span.star:hover ~ span.star:before {
     content: "\f005";
@@ -135,4 +144,24 @@ h1.letterpress{
     -webkit-column-break-inside: avoid;
     -moz-column-break-inside: avoid;
     column-break-inside: avoid;
+}
+
+.item img {
+  margin-left : auto;
+  margin-right: auto;
+
+}
+
+input[type="file"] {
+  z-index: 2;
+  opacity: 0;
+  position: absolute;
+  margin-top: 10px;
+  width: 125px;
+  height: 34px;
+}
+
+.fileinput-button {
+  width : 115px;
+  height : 34px;
 }
