refactored js structure

--- a/static/js/templates/route_map.html
+++ b/static/js/templates/route_map.html
@@ -17,7 +17,7 @@
         </table>
     </div>
     <div class='well map-well' id='map_well'>
-        <div id='map_canvas' class='map-canvas'></div>
+        <div id='map_canvas' class='map-canvas route-canvas'></div>
         <div class='btn-group map-buttons'>
             <button class='btn btn-default' id='reverse'>Reverse</button>
         </div>
