--- a/static/less/app.less
+++ b/static/less/app.less
@@ -31,16 +31,17 @@ div.map-well {
   height : 350px;
 }
 //
-div.map-canvas {
+.route-canvas {
     height:280px;
-//    width:100%;
+}
+.front-canvas {
+    height:350px;
 }
 
 div.map-buttons {
     bottom:35px;
     float: right;
     margin-right: 10px;
-//    position: absolute;
 }
 input.region-search {
     bottom:25px;
