--- a/templates/front.html
+++ b/templates/front.html
@@ -32,7 +32,7 @@
         </div>
         <div class="well map-well" id="map_well" data-intro='To find your own path, you can search the map.'
              data-step='1'>
-            <div id="map_canvas" class="map-canvas" data-intro="Select the trail segments you want, making sure they are contiguous." data-step="4">
+            <div id="map_canvas" class="map-canvas front-canvas" data-intro="Select the trail segments you want, making sure they are contiguous." data-step="4">
             </div>
             <input type="search" class="region-search input-lg" id="region_search_box" placeholder="Search by region.">
             <div class="btn-group map-buttons">
