modified settings/template for workflow

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,11 @@
     {#    })();#}
     {#</script>#}
 
+    {% if DEBUG %}
     <script data-main="/static/js/main" src="/static/js/libs/require/require.js"></script>
+    {% else %}
+    <script data-main="/static/js/main.built" src="/static/js/libs/require/require.js"></script>
+    {% endif %}
     <script>
         define('config', function () {
             return {
