--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
 
             </div>
     </div>
-    </div>
+{#    </div>#}
 
     {#<script type="text/javascript">#}
     {#    var appid = {{ appid }}#}
