--- a/static/less/app.less
+++ b/static/less/app.less
@@ -1,4 +1,5 @@
 @import "bootstrap.less";
+@import "../css/introjs.css";
 
 [class^="icon-"], [class*=" icon-"], .nav-pills > .active > a > [class^="icon-"]{
     background:none;
@@ -13,7 +14,6 @@
     -webkit-box-shadow: 1px 1px 3px 3px #ccc;
     box-shadow:         1px 1px 3px 3px #ccc;
 }
-
 
 .scale-img tbody tr td:nth-child(odd) {
     background-color: #000000;
