--- a/templates/index.html
+++ b/templates/index.html
@@ -80,9 +80,7 @@
             </div>
         </div>
         <div class="col-md-3" id="right">
-            <div id="intro_tour">
                 {% block tour %}{% endblock %}
-            </div>
             <hr style="margin:10px 0 10px;width:250px">
 
             <form role="form" method="get" class="form-horizontal">
@@ -136,6 +134,8 @@
             };
         });
     </script>
+{#    <script type="text/javascript" src="libs/introjs/intro"></script>#}
+{#    <script src = "libs/introjs/intro"#}
 </body>
 
 </html>​
