--- a/templates/route.html
+++ b/templates/route.html
@@ -26,7 +26,11 @@
                 <li id = "view_map"><a href = "#"><i class="icon-map-marker"></i>View Map</a></li>
                 <li id = "view_elevation"><a href = "#"><i class="icon-bar-chart"></i>Elevation Profile</a></li>
                 <li id = "view_photo" data-original-title=""><a href = "#" ><i class="icon-camera-retro"></i>Add Photo</a></li>
-                <li id = "save_route"><a href = "#" ><i class="icon-facebook"></i>Save Trail</a></li>
+                <li id = "save_route">
+                    <div class="alert {% if voted %} alert-success{% endif %}">
+                        <a href = "#" ><i class="icon-facebook"></i>Save Trail</a>
+                    </div>
+                </li>
                 <hr>
 
                 <li id="distance" class="metric">
