added default route photo. photo view in admin

--- a/templates/front.html
+++ b/templates/front.html
@@ -74,7 +74,7 @@
                                     {% if item.properties.photo.small %}
                                     {{ item.properties.photo.small }}
                                     {% else %}
-                                    static/images/75x75.gif
+                                    static/images/trail-img.png
                                     {% endif %}
                                     ">
                             </a>
