styled front scales

--- a/static/less/app.less
+++ b/static/less/app.less
@@ -10,11 +10,15 @@
     height:5px;
     border-style:solid;
     border-width:1px;
-    -moz-box-shadow:    1px 1px 3px 3px #ccc;
-    -webkit-box-shadow: 1px 1px 3px 3px #ccc;
-    box-shadow:         1px 1px 3px 3px #ccc;
+//    -moz-box-shadow:    1px 1px 3px 3px #ccc;
+//    -webkit-box-shadow: 1px 1px 3px 3px #ccc;
+//    box-shadow:         1px 1px 3px 3px #ccc;
 }
 
+.scale-small {
+  width:75%;
+  margin:0 auto 5px;
+}
 .scale-img tbody tr td:nth-child(odd) {
     background-color: #000000;
     width:12.5%;
