--- a/templates/front.html
+++ b/templates/front.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="small_scale">
-            <table class="scale-img">
+            <table class="scale-img scale-small">
                 <tbody>
                 <tr>
                     {% for num in range(8) %}
