fixed route page title

--- a/templates/route.html
+++ b/templates/route.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block title %}{{ name }}{% endblock %}
+{% block title %}{{ properties.name }}{% endblock %}
 {% block meta %}
     <meta name="description" content="Detailed trekking information for {{ properties.name }}, with topographical maps, photographs and an elevation profile." />
 {% endblock %}
